2005-01-24 Duncan Coutts <duncan@coutts.uklinux.net>

	* INSTALL: update the install instructions

	* Makefile.am: add missing dependency.

	* configure.ac: bump version to 0.9.7

2005-01-23 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/formatXml.c, tools/apiGen/gapi_parser.pl: add extra
	bits of the Gtk# gapi system.

	* tools/apiGen/Makefile, tools/apiGen/mkdocxml.sh: add Makefile to
	automate everything better.

	* tools/apiGen/gen-all.sh: retire previous automation script

	* tools/apiGen/Template.chs, tools/apiGen/format-docs.xsl,
	tools/apiGen/ApiGen.hs: updates to the code generation tool. Change
	the style from single module per file to having every module in a
	single file since this is the way the gapi tool works.

	* tools/apiGen/gtk-sources.xml, tools/apiGen/gdk-sources.xml,
	tools/apiGen/pango-sources.xml, tools/apiGen/glade-sources.xml: add
	gapi-parser input files for an initial set of modules.

	* tools/apiGen/README: update the description and intructions.

2005-01-23 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, mk/common.mk: Resurrect dependency generation under
	the new scheme of inferring the current package. Dependency files
	are now always loaded but only recreated if we are not cleaning or
	already building dependencies.

	* mk/common.mk: Set the initial heap size for tools to 400m to
	accommodate for less fortunate people.

	* tools/c2hs/chs/CHS.hs: Emit a newline after a LINE directive if
	the next verbatim text does not start with one. This fixes a
	problem with gcc on Mac OS.

2005-01-20 Duncan Coutts <duncan@coutts.uklinux.net>

	* Makefile.am: make each package's LIBS include the LIBS of its
	dependent packages, which is the same as we do for the CFLAGS.

	* configure.ac: bump version to 0.9.7_rc4

2005-01-19 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/c2hs/c/CLexer.hs: make c2hs understand the __signed,
	__signed__, __volatile and __volatile__ portability keyword synonyms.
